test/Fail/Issue1408a.err
Issue1408a.agda:22.31-23.32: error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Is empty: suc i ≅ zero (stuck)
      [ at Issue1408a.agda:23.30-32 ]
  Is empty: zero ≅ suc j (stuck)
      [ at Issue1408a.agda:22.31-33 ]
